Cover remaining defensive branches in oauth2 autoconfig helpers
Two helper methods still had defensive branches unreachable from
Spring-context tests:

- authorizationServersFor: rs == null ternary and blank issuer-uri
  (ObjectProvider<OAuth2ResourceServerProperties> is always available
  in SpringBootTest contexts; test fixtures always set a non-blank
  issuer-uri).
- validateComplianceMode: rs == null ternary and audiences == null
  short-circuit (Spring Boot's binder initializes the audiences list
  rather than leaving it null).

Made both package-private and added direct unit-test classes with
stubbed ObjectProvider instances that drive the narrow branches:

- MocapiOAuth2AuthorizationServersTest: 5 cases covering explicit list
  override, issuer-uri fallback, absent resource-server-props bean,
  null issuer-uri, blank issuer-uri.
- MocapiOAuth2ComplianceValidationTest: 5 cases covering happy path,
  missing JwtDecoder, absent resource-server-props bean, null audiences
  list, empty audiences list.

Also switched authorizationServersFor's blank check from inline
(issuerUri == null || issuerUri.isBlank()) to StringUtils.isBlank for
consistency with resourceNameFor.

Total oauth2 test count: 38 (was 28).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>